--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -37,10 +37,6 @@ jobs:
           
       - name: Download onnxruntime lib
         run: |
-          wget https://github.com/microsoft/onnxruntime/releases/download/v1.12.1/onnxruntime-linux-x64-1.12.1.tgz,
-          tar -xvzf onnxruntime-linux-x64-1.12.1.tgz onnxruntime
-          ls -al,
-          cd onnxruntime,
-          ls -al
+          wget https://github.com/microsoft/onnxruntime/releases/download/v1.12.1/onnxruntime-linux-x64-1.12.1.tgz
           
           
