--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -38,5 +38,9 @@ jobs:
       - name: Download onnxruntime lib
         run: |
           wget https://github.com/microsoft/onnxruntime/releases/download/v1.12.1/onnxruntime-linux-x64-1.12.1.tgz
-          tar -zxvf onnxruntime-linux-x64-1.12.1.tgz -C onnxruntime
+          mkdir onnxruntime
+          tar -zxvf onnxruntime-linux-x64-1.12.1.tgz -C onnxruntime --strip-components=1
+          cd onnxruntime
+          ls -al
+          
           
