--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -16,7 +16,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+  build_on_ubuntu:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -42,5 +42,14 @@ jobs:
           tar -zxvf onnxruntime-linux-x64-1.12.1.tgz -C onnxruntime --strip-components=1
           cd onnxruntime
           ls -al
-          
+  
+  build_on_windows:
+    runs-on: windows-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Download onnxruntime lib
+        run: |
+          wget https://github.com/microsoft/onnxruntime/releases/download/v1.12.1/onnxruntime-win-x64-1.12.1.zip
+          unzip onnxruntime-win-x64-1.12.1.zip
+          dir
           
