--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -49,6 +49,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Download onnxruntime lib
         run: |
+          choco install wget --no-progress
           wget https://github.com/microsoft/onnxruntime/releases/download/v1.12.1/onnxruntime-win-x64-1.12.1.zip
           unzip onnxruntime-win-x64-1.12.1.zip
           dir
